--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "ssb-conn-db": "~0.2.0",
-    "ssb-conn-hub": "~0.0.9",
-    "ssb-conn-staging": "~0.0.6"
+    "ssb-conn-hub": "~0.1.0-rc1",
+    "ssb-conn-staging": "~0.0.7"
   },
   "devDependencies": {
     "@types/node": "^11.10.4",
