--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "url": "git://github.com/staltz/ssb-conn-query.git"
   },
   "dependencies": {
-    "ssb-conn-db": "~1.0.0",
-    "ssb-conn-hub": "~1.0.0",
+    "ssb-conn-db": "~1.0.1",
+    "ssb-conn-hub": "~1.1.0",
     "ssb-conn-staging": "~1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^11.10.4",
-    "tape": "^4.9.2",
-    "typescript": "3.5.x"
+    "@types/node": "12.x",
+    "tape": "^5.2.2",
+    "typescript": "4.2.x"
   },
   "scripts": {
     "typescript": "tsc",
