--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   },
   "devDependencies": {
     "@types/node": "12.x",
+    "tap-bail": "^1.0.0",
+    "tap-spec": "^5.0.0",
     "tape": "^5.2.2",
     "typescript": "4.2.x"
   },
   "scripts": {
     "typescript": "tsc",
-    "tape": "set -e; for t in test/*.js; do node $t; done",
+    "tape": "tape test/*.js | tap-bail | tap-spec",
     "test": "npm run typescript && npm run tape"
   },
   "author": "Andre Staltz <contact@staltz.com> (http://staltz.com)",
